# LDSO

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  DatasetReader.h  run_dso_euroc.cc  test.cpp
include/: Settings.h
include/frontend/: FullSystem.h  Undistort.h
include/internal/: FrameHessian.h  IndexThreadReduce_old.h  ThreadPool.h
scripts/: test.py
src/: Setting.cc
src/frontend/: CoarseTracker.cc  FullSystem.cc  Undistort.cc
src/internal/: FrameHessian.cc  ImmaturePoint.cc  Residuals.cc
src/internal/OptimizationBackend/: AccumulatedSCHessian.cc  AccumulatedTopHessian.cc  EnergyFunctional.cc
